--- a/Configuration/fpl_config.json
+++ b/Configuration/fpl_config.json
@@ -7,21 +7,21 @@
         "3":"Bournemouth",
         "4":"Brentford",
         "5":"Brighton",
-        "6":"Burnley",
-        "7":"Chelsea",
-        "8":"Crystal Palace",
-        "9":"Everton",
-        "10":"Fulham",
-        "11":"Liverpool",
-        "12":"Luton",
+        "6":"Chelsea",
+        "7":"Crystal Palace",
+        "8":"Everton",
+        "9":"Fulham",
+        "10":"Ipswich Town",
+        "11":"Leicester City",
+        "12":"Liverpool",
         "13":"Manchester City",
         "14":"Manchester United",
-        "15":"Newcastle",
+        "15":"Newcastle United",
         "16":"Nottingham Forrest",
-        "17":"Sheffield United",
+        "17":"Southampton",
         "18":"Tottenham Hotspur",
-        "19":"West Ham",
-        "20":"Wolves"
+        "19":"West Ham United",
+        "20":"Wolverhampton Wanderers"
 
     },
 
