Completed initial refactoring of code

--- a/Configuration/fpl_config.json
+++ b/Configuration/fpl_config.json
@@ -52,7 +52,7 @@
         "assists",
         "expected_goals",
         "expected_assists", 
-        "xpoints",
+        "attacking_score",
         "expected_goal_involvements", 
         "goals_conceded", 
         "clean_sheets",
